Graphana dashboard Task handling SOrting and filtering Metrics route
